--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
 
 h1 {
     color: #fff;
-    text-transform: uppercase;
+/*    text-transform: uppercase;*/
 }
 
 section {
@@ -61,15 +61,15 @@ section {
     height: auto;
 }
 
-/* ABOUT  SECTION */
+/* HOW IT WORKS SECTION */
 
-.about-image {
+.how-it-works-image {
     width: 100%;
     padding: 5px;
     border: 1px solid #848484;
 }
 
-.about h2 {
+.how-it-works h2 {
     text-align: center;
 }
 
@@ -114,4 +114,22 @@ footer a {
 
 footer p {
     text-align: right;
+}
+
+/* ABOUT PAGE SECTION */
+
+.about-title {
+    background-color: #3498db;
+    height: 80px;
+    margin: 0;
+    padding: 0;
+}
+
+.about-title h1 {
+}
+
+/* CONTACT PAGE SECTION */
+
+.contact textarea {
+    height: 100px;
 }
